update: socket for request